--- a/E-Migrant.App/E-Migrant.App.Frontend/E-Migrant.App.Frontend.csproj
+++ b/E-Migrant.App/E-Migrant.App.Frontend/E-Migrant.App.Frontend.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
