--- a/E-Migrant.App/E-Migrant.App.Frontend/appsettings.json
+++ b/E-Migrant.App/E-Migrant.App.Frontend/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDataContextConnection": "Server=localhost,1433\\MSSQLLocalDB;Initial Catalog=grupo14_emprendedores;User=SA;Password="
+    "IdentityDataContextConnection": "Server=localhost,1433\\MSSQLLocalDB;Initial Catalog=grupo14_emprendedores;User=SA;Password=PasswordFilomena30*"
   }
 }
