Reto33 cu-17 HU-33

--- a/E-Migrant.App/E-Migrant.App.Dominio/E-Migrant.App.Dominio.csproj
+++ b/E-Migrant.App/E-Migrant.App.Dominio/E-Migrant.App.Dominio.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>E_Migrant.App.Dominio</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
